@@ -22,10 +22,11 @@ It provides the ability to push shuffle data into centralized storage service,
 changing the shuffle style from "local file pull-like style" to "remote block push-like style".
 It brings in several advantages like supporting disaggregated storage deployment,
 super large shuffle jobs, and high elasticity.
-Currently it supports [Apache Spark][1] and [Apache Hadoop MapReduce][2].
+Currently it supports [Apache Spark][1], [Apache Hadoop MapReduce][2] and [Apache Tez][3].
 
 [1]: https://spark.apache.org
 [2]: https://hadoop.apache.org
+[3]: https://tez.apache.org
 
 [![Build](https://github.com/apache/incubator-uniffle/actions/workflows/build.yml/badge.svg?branch=master&event=push)](https://github.com/apache/incubator-uniffle/actions/workflows/build.yml)
 [![Codecov](https://codecov.io/gh/apache/incubator-uniffle/branch/master/graph/badge.svg)](https://codecov.io/gh/apache/incubator-uniffle)
@@ -96,13 +97,21 @@ Build against Spark 3.2.0
 
     mvn -DskipTests clean package -Pspark3.2.0
 
-Build against Hadoop 2.8.5
+Build against Hadoop MapReduce 2.8.5
 
     mvn -DskipTests clean package -Pmr,hadoop2.8
 
-Build against Hadoop 3.2.1
+Build against Hadoop MapReduce 3.2.1
 
     mvn -DskipTests clean package -Pmr,hadoop3.2
+
+Build against Tez 0.9.1
+
+    mvn -DskipTests clean package -Ptez
+
+Build against Tez 0.9.1 and Hadoop 3.2.1
+
+    mvn -DskipTests clean package -Ptez,hadoop3.2
 
 To package the Uniffle, run:
 
@@ -184,7 +193,8 @@ rss-xxx.tgz will be generated for deployment
      rss.storage.basePath /data1/rssdata,/data2/rssdata....
      # it's better to config thread num according to local disk num
      rss.server.flush.thread.alive 5
-     rss.server.flush.threadPool.size 10
+     rss.server.flush.localfile.threadPool.size 10
+     rss.server.flush.hadoop.threadPool.size 10
      rss.server.buffer.capacity 40g
      rss.server.read.buffer.capacity 20g
      rss.server.heartbeat.interval 10000
@@ -247,6 +257,23 @@ The jar for MapReduce is located in <RSS_HOME>/jars/client/mr/rss-client-mr-XXXX
    ```
 Note that the RssMRAppMaster will automatically disable slow start (i.e., `mapreduce.job.reduce.slowstart.completedmaps=1`)
 and job recovery (i.e., `yarn.app.mapreduce.am.job.recovery.enable=false`)
+
+### Deploy Tez Client
+
+1. Append client jar to pacakge which is set by 'tez.lib.uris'.
+
+In production mode, you can append client jar (rss-client-tez-XXXXX-shaded.jar) to package which is set by 'tez.lib.uris'. 
+
+In development mode, you can append client jar (rss-client-tez-XXXXX-shaded.jar) to HADOOP_CLASSPATH.
+
+2. Update tez-site.xml to enable Uniffle.
+
+| Property Name              |Default| Description                  |
+|----------------------------|---|------------------------------|
+| tez.am.launch.cmd-opts     |-XX:+PrintGCDetails -verbose:gc -XX:+PrintGCTimeStamps -XX:+UseNUMA -XX:+UseParallelGC org.apache.tez.dag.app.RssDAGAppMaster| enable remote shuffle service |
+| tez.rss.coordinator.quorum |coordinatorIp1:19999,coordinatorIp2:19999|coordinator address|
+
+Note that the RssDAGAppMaster will automatically disable slow start (i.e., `tez.shuffle-vertex-manager.min-src-fraction=1`, `tez.shuffle-vertex-manager.max-src-fraction=1`).
 
 ### Deploy In Kubernetes
 
